# VCS

./: .gitignore  readme.md  readmeCN.md  tools.cmd  vcs.cmd  zTest.cmd
patch/: AMF.cmd  AMF.patch  AOM.cmd.bak  Vulkan-Loader.patch  after_bzip2.cmd  after_dav1d.cmd  after_fontconfig.cmd  after_fribidi.cmd  after_gflags.cmd  after_glib.cmd  after_harfbuzz.cmd  after_hdf5.cmd  after_leptonica.cmd  after_libjpeg-turbo.cmd  after_libmfx.cmd  after_libopenmpt.cmd  after_libpng.cmd  after_libxml2.cmd  after_openh264.cmd  after_opus.cmd  after_sdl2.cmd  after_sdl3.cmd  after_snappy.cmd  after_sqlite3.cmd  after_x265.cmd  after_zlib.cmd  after_zstd.cmd  before_AviSynth-Headers.cmd  before_libass.cmd  before_lmdb.cmd  before_simd.cmd  before_spirv-tools.cmd  boost.cmd  ffmpeg.cmd  fontconfig.ini  fribidi.ini  kvazaar.cmd  kvazaar.patch  lame.cmd  lcms2.ini  (+34 more)
patch/AviSynth-Headers/: version.h
patch/lame/: vs2019_libmp3lame.sln  vs2019_libmp3lame.vcxproj  vs2019_libmpg123_config.props
patch/libass/: CMakeLists.txt  Makefile.am  config.h.in  libass.def
patch/libilbc/: ilbc_export.h
patch/lmdb/: CMakeLists.txt
single/: chromium.cmd  lapack.cmd  openblas.cmd  openblas.patch  pdfium.cmd
src/: CommonCore.cmd  cmake.txt  env.cmd  proxy.cmd  rdini.cmd  sdk.cmd  strRep.cmd  toolsx64.cmd  toolsx86.cmd  vcm.cmd
